jenkinslearn/ Custom Install/objects/QAS_CA_Account__c.object
<CustomObject>
    <description>Configuration data for the QAS address correction solution for salesforce.com. Should only be accessible to System Administrators.</description>
    <fields>
        <fullName>DefaultVerificationCountry__c</fullName>
        <defaultValue>&quot;USA&quot;</defaultValue>
        <label>Default Verification Country</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InitialIntuitiveSearchAfterXCharacters__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Initial Intuitive Search After X Chars</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InteractiveIntervalFromLastUpdate__c</fullName>
        <label>Interactive interval from last update</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InteractiveInvokeIntervalFromLastUpdate__c</fullName>
        <label>Interactive Invoke Interval</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsNoCountryValidCountry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNullOrEmptyValidCountry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validate empty country fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastErrorMessage__c</fullName>
        <label>Last error message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastFailedValidation__c</fullName>
        <label>Time of the Last Failed Validation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LicenseKey__c</fullName>
        <label>License Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MaxPicklistItemsCount__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Max Picklist Items Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfFailedAttempts__c</fullName>
        <label>Number of failed attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RefineIntuitiveSearchAfterXSeconds__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Refine Intuitive Search After X Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShowDPIDFieldInIntuitive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show DPID Field In Intuitive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TriggerRecordsLimit__c</fullName>
        <label>Trigger Records Limit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValidCountryValues__c</fullName>
        <label>Valid Country Values</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationAttemptsPeriodInMinutes__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Validation Attempts Period In Minutes</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValidationSessionToken__c</fullName>
        <label>Address Validation Session Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationTypes__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Validation Types</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>QAS Account</label>
    <nameField>
        <label>QAS Account name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QAS Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>